syntax = "proto3";

package proto;

option go_package = "github.com/sergalkin/gophkeeper/api/proto";

message SecretTypesListRequest {}

message SecretType {
    uint32 id = 1;
    string title = 2;
}

message SecretTypesListResponse {
    repeated SecretType secrets = 1;
}

service Secret {
    rpc GetSecretTypesList (SecretTypesListRequest) returns (SecretTypesListResponse);
}